# codon

./: CMakeLists.txt  README.md
codon/cir/llvm/: llvisitor.cpp  llvm.h
codon/sir/llvm/: llvisitor.cpp
stdlib/internal/: c_stubs.codon  file.codon
stdlib/internal/types/: str.codon
targets/wasm/: README.md
targets/wasm/demo/: CMakeLists.txt  hello.codon
